# cmd/server/main.go
@@ -7,6 +7,14 @@ import (
 	server "github.com/dimk00z/GophKeeper/internal/app/server"
 )
 
+// @title Gophkeeper Server
+// @version 1.0.0
+// @description Gophkeeper project
+// @contact.name Kuznetsov Dmitriy
+// @contact.url https://github.com/dimk00z
+// @contact.email dimk0z@yandex.ru
+// @host localhost:8080
+// @BasePath /api/v1
 func main() {
 	log.Println("Server App")
 
