# internal/controller/http/v1/router.go
@@ -6,26 +6,22 @@ import (
 	"github.com/prometheus/client_golang/prometheus/promhttp"
 
 	// Swagger docs.
-	_ "github.com/dimk00z/GophKeeper/docs"
+	_ "github.com/dimk00z/GophKeeper/docs/server"
+
 	usecase "github.com/dimk00z/GophKeeper/internal/usecase/server"
 	"github.com/dimk00z/GophKeeper/pkg/logger"
+	swaggerFiles "github.com/swaggo/files"
+	ginSwagger "github.com/swaggo/gin-swagger"
 )
 
-// NewRouter -.
-// Swagger spec:
-// @title       Go Clean Template API
-// @description Using a GophKeeper service as an example
-// @version     1.0
-// @host        localhost:8080
-// @BasePath    /api/v1
 func NewRouter(handler *gin.Engine, l logger.Interface, t usecase.GophKeeper) {
 	// Options
 	handler.Use(gin.Logger())
 	handler.Use(gin.Recovery())
 
 	// Swagger
-	// swaggerHandler := ginSwagger.DisablingWrapHandler(swaggerFiles.Handler, "DISABLE_SWAGGER_HTTP_HANDLER")
-	// handler.GET("/swagger", swaggerHandler)
+
+	handler.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
 	// Prometheus metrics
 	handler.GET("/metrics", gin.WrapH(promhttp.Handler()))
